--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <article class="article1">
             <i class="fa-solid fa-location-dot"></i>
             <form><input type="search" id="search" name="search" placeholder="Marseille, France"></form>
-            <button class="busearch">rechercher</button>
+            <button class="busearch">Rechercher</button>
          </article>
 
 
