--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </header>
 
       <main>
-         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-         <p>En plein centre-ville ou en pleine nature</p>
+         <h1 class="reve">Trouvez votre hébergement pour des vacances de rêve</h1>
+         <p class="ville">En plein centre-ville ou en pleine nature</p>
 
          <article class="article1">
             <i class="fa-solid fa-location-dot"></i>
