--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
          </article>
 
-         <div class="heb+pop">
+         <div class="hebpop">
             <p><i class="fa-solid fa-info"></i>
                Plus de 500 logements sont disponibles dans cette ville</p>
 
