--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <section class="section1">
                <h1 id="HébergementsàMarseille">Hébergements à Marseille</h1>
 
-
+<div id="col">
                <article class="cardsheb">
                   <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergecanebière.jpg"
                      alt="Auberge La Canebière">
@@ -83,7 +83,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
                </article>
 
@@ -100,7 +100,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
                </article>
 
@@ -117,7 +117,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
                </article>
 
@@ -133,7 +133,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
                </article>
 
@@ -150,7 +150,7 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
                </article>
 
@@ -167,9 +167,9 @@
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
                      <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star empty-star"></i>
                   </div>
-               </article>
+               </article></div>
 
                <h2 class="showmore">
                   Afficher plus
@@ -194,7 +194,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty-star"></i>
                      </div>
                   </article>
                </div>
@@ -213,7 +213,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty-star"></i>
                      </div>
                   </article>
                </div>
@@ -230,7 +230,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty-star"></i>
                      </div>
                   </article>
                </div>
