--- a/index.html
+++ b/index.html
@@ -70,109 +70,115 @@
             <section class="section1">
                <h1 id="HébergementsàMarseille">Hébergements à Marseille</h1>
 
-<div id="col">
-               <article class="cardsheb">
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergecanebière.jpg"
-                     alt="Auberge La Canebière">
-                  <div class="content">
-                     <h2 class="titlecard">Auberge La Canebière</h2>
-                     <p> Nuit à partir de 25€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article>
+               <div id="col">
+
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergecanebière.jpg"
+                           alt="Auberge La Canebière">
+                        <div class="content">
+                           <h2 class="titlecard">Auberge La Canebière</h2>
+                           <p> Nuit à partir de 25€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article>
+                  </a>
 
 
-               <article class="cardsheb">
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelport.jpg"
+                           alt="Hôtel du port">
+                        <div class="content">
+                           <h2 class="titlecard">Hôtel du port</h2>
+                           <p class="prix"> Nuit à partir de 52€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article></a>
 
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelport.jpg" alt="Hôtel du port">
-                  <div class="content">
-                     <h2 class="titlecard">Hôtel du port</h2>
-                     <p class="prix"> Nuit à partir de 52€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article>
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelmouettes.jpg"
+                           alt="Hôtel Les mouettes">
+                        <div class="content">
+                           <h2 class="titlecard">Hôtel Les mouettes</h2>
+                           <p class="prix"> Nuit à partir de 76€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article></a>
 
-               <article class="cardsheb">
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelmer.jpg"
+                           alt="Hôtel de la mer">
+                        <div class="content">
+                           <h2 class="titlecard">Hôtel de la mer</h2>
+                           <p class="prix"> Nuit à partir de 46€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article></a>
 
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelmouettes.jpg"
-                     alt="Hôtel Les mouettes">
-                  <div class="content">
-                     <h2 class="titlecard">Hôtel Les mouettes</h2>
-                     <p class="prix"> Nuit à partir de 76€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article>
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergepanier.jpg"
+                           alt="Auberge Le Panier">
+                        <div class="content">
+                           <h2 class="titlecard">Auberge Le Panier</h2>
+                           <p class="prix"> Nuit à partir de 23€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article></a>
 
-               <article class="cardsheb">
+                  <article class="cardsheb">
+                     <a href="lien">
+                        <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelport.jpg"
+                           alt="Hôtel Chez Amina">
+                        <div class="content">
+                           <h2 class="titlecard">Hôtel Chez Amina</h2>
+                           <p class="prix"> Nuit à partir de 96€ </p>
+                        </div>
+                        <div class="notes">
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star"></i>
+                           <i class="fa-solid fa-star empty-star"></i>
+                        </div>
+                  </article>
+               </div></a>
 
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelmer.jpg" alt="Hôtel de la mer">
-                  <div class="content">
-                     <h2 class="titlecard">Hôtel de la mer</h2>
-                     <p class="prix"> Nuit à partir de 46€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article>
-
-               <article class="cardsheb">
-
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergepanier.jpg"
-                     alt="Auberge Le Panier">
-                  <div class="content">
-                     <h2 class="titlecard">Auberge Le Panier</h2>
-                     <p class="prix"> Nuit à partir de 23€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article>
-
-               <article class="cardsheb">
-
-                  <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/hotelport.jpg"
-                     alt="Hôtel Chez Amina">
-                  <div class="content">
-                     <h2 class="titlecard">Hôtel Chez Amina</h2>
-                     <p class="prix"> Nuit à partir de 96€ </p>
-                  </div>
-                  <div class="notes">
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star"></i>
-                     <i class="fa-solid fa-star empty-star"></i>
-                  </div>
-               </article></div>
-
-               <h2 class="showmore">
-                  Afficher plus
+               <h2 class="showmore"><a href="show">
+                  Afficher plus</a>
                </h2>
             </section>
 
