--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                </div></a>
 
                <h2 class="showmore"><a href="show">
-                  Afficher plus</a>
+                     Afficher plus</a>
                </h2>
             </section>
 
@@ -186,15 +186,15 @@
                <h3>Les plus populaires
                   <i class="fa-solid fa-chart-line"></i>
                </h3>
-               <div class="cards">
-                  <article class="cardmf1">
 
-                     <img src="Images/ImagesBooki/hebergements/4_small/hotelsoleilmatin.jpg"
-                        alt="Hôtel Le soleil du matin">
-                     <div class="content">
-                        <h2 class="titlecard">Hôtel Le soleil du matin</h2>
-                        <p> Nuit à partir de 128€ </p>
-                     </div>
+               <div class="cards">
+
+                  <img class="imgpop" src="Images/ImagesBooki/hebergements/4_small/hotelsoleilmatin.jpg"
+                     alt="Hôtel Le soleil du matin">
+                  <div class="content">
+                     <h2 class="titlecard">Hôtel Le soleil du matin</h2>
+                     <p> Nuit à partir de 128€ </p>
+
                      <div class="notes">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -202,18 +202,17 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star empty-star"></i>
                      </div>
-                  </article>
+                  </div>
                </div>
 
                <div class="cards">
-                  <article class="cardmf3h2">
 
-                     <img src="Images/ImagesBooki/hebergements/4_small/chambreshotescoeureau.jpg"
-                        alt="Chambres d'hôtes Au coeur de l'eau">
-                     <div class="content">
-                        <h2 class="titlecard">Chambres d'hôtes au coeur de l'eau</h2>
-                        <p> Nuit à partir de 71€ </p>
-                     </div>
+                  <img class="imgpop" src="Images/ImagesBooki/hebergements/4_small/chambreshotescoeureau.jpg"
+                     alt="Chambres d'hôtes Au coeur de l'eau">
+                  <div class="content">
+                     <h2 class="titlecard">Chambres d'hôtes au coeur de l'eau</h2>
+                     <p> Nuit à partir de 71€ </p>
+
                      <div class="notes">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -221,16 +220,17 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star empty-star"></i>
                      </div>
-                  </article>
+                  </div>
                </div>
 
                <div class="cards">
-                  <article class="cardmf3">
-                     <img src="Images/ImagesBooki/hebergements/4_small/hotelbleublanc.jpg" alt="Hôtel Bleu et Blanc">
-                     <div class="content">
-                        <h2 class="titlecard">Hôtel Bleu et Blanc</h2>
-                        <p> Nuit à partir de 68€ </p>
-                     </div>
+
+                  <img class="imgpop" src="Images/ImagesBooki/hebergements/4_small/hotelbleublanc.jpg"
+                     alt="Hôtel Bleu et Blanc">
+                  <div class="content">
+                     <h2 class="titlecard">Hôtel Bleu et Blanc</h2>
+                     <p> Nuit à partir de 68€ </p>
+
                      <div class="notes">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -238,7 +238,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star empty-star"></i>
                      </div>
-                  </article>
+                  </div>
                </div>
             </section>
 
