--- a/index.html
+++ b/index.html
@@ -247,81 +247,82 @@
          </div>
          <section class="activity">
             <h3 id="ActivitésàMarseille">Activités à Marseille</h3>
+            <div class="blocactiv">
+               <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/vieuxport.jpg" alt="Vieux-Port">
+                  <h2 class="titlecard">Vieux-Port</h2>
+               </div>
 
-            <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/vieuxport.jpg" alt="Vieux-Port">
-               <h2 class="titlecard">Vieux-Port</h2>
+               <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/fortpomegues.jpg"
+                     alt="Fort de Pomègues">
+                  <h2 class="titlecard">Fort de Pomègues</h2>
+               </div>
+
+               <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/parcnation.jpg"
+                     alt="Parc national des Calanques">
+                  <h2 class="titlecard">Parc national des Calanques</h2>
+               </div>
+
+               <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/notredamegarde.jpg"
+                     alt="Notre-Dame-de-la-Garde">
+                  <h2 class="titlecard">Notre-Dame-de-la-Garde</h2>
+               </div>
             </div>
 
-            <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/fortpomegues.jpg"
-               alt="Fort de Pomègues">
-            <h2 class="titlecard">Fort de Pomègues</h2>
-   </div>
+         </section>
 
-   <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/parcnation.jpg"
-      alt="Parc national des Calanques">
-   <h2 class="titlecard">Parc national des Calanques</h2>
-   </div>
+      </main>
 
-   <div class="activcard"><img src="Images/ImagesBooki/activites/2_large/notredamegarde.jpg"
-      alt="Notre-Dame-de-la-Garde">
-   <h2 class="titlecard">Notre-Dame-de-la-Garde</h2>
-   </div>
+      <footer>
+         <div class="footer">
+            <h2>
+               À propos
+            </h2>
+            <ul>
+               <li>
+                  Fonctionnement du site
+               </li>
+               <li>
+                  Conditions générales
+               </li>
+               <li>
+                  Données et confidentialité
+               </li>
+            </ul>
 
-   </section>
+         </div>
 
-   </main>
+         <div class="footer">
+            <h2>
+               Nos Hébergements
+            </h2>
+            <ul>
+               <li>
+                  Charte qualité
+               </li>
+               <li>
+                  Proposer votre hôtel
+               </li>
 
-   <footer>
-      <div class="àpropos">
-         <h2>
-            À propos
-         </h2>
-         <ul>
-            <li>
-               Fonctionnement du site
-            </li>
-            <li>
-               Conditions générales
-            </li>
-            <li>
-               Données et confidentialité
-            </li>
-         </ul>
+            </ul>
 
-      </div>
+         </div>
 
-      <div class="nosheb">
-         <h2>
-            Nos Hébergements
-         </h2>
-         <ul>
-            <li>
-               Charte qualité
-            </li>
-            <li>
-               Proposer votre hôtel
-            </li>
+         <div class="footer">
+            <h2>
+               Assistance
+            </h2>
+            <ul>
+               <li>
+                  Centre d'aide
+               </li>
+               <li>
+                  Nous contacter
+               </li>
 
-         </ul>
+            </ul>
 
-      </div>
-
-      <div class="assistance">
-         <h2>
-            Assistance
-         </h2>
-         <ul>
-            <li>
-               Centre d'aide
-            </li>
-            <li>
-               Nous contacter
-            </li>
-
-         </ul>
-
-      </div>
-   </footer>
+         </div>
+      </footer>
    </div>
 </body>
 
