--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <form>
                <input type="search" id="search" name="search" placeholder="Marseille, France">
             </form>
-            <button class="busearch">Rechercher</button>
+            <button type="submit" id="busearch">
+               <!--<i class="fas fa-search" id="busearch_loupe"></i>-->
+               <span id="busearchspan">Rechercher</span>
+           </button>
          </section>
 
 
@@ -67,7 +70,7 @@
          </article></div>
 
          <div class="hebpop">
-            <p><i class="fa-solid fa-info"></i>
+            <label><i class="fa-solid fa-info"></i></label>
                Plus de 500 logements sont disponibles dans cette ville</p>
 
             <div class="all">
