--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </header>
 <!--main-->
       <main>
+         <!--section recherche-->
          <div id="search_filters">
          <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
          <h2>En plein centre-ville ou en pleine nature</h2>
@@ -40,7 +41,7 @@
            </button>
          </section>
 
-
+<!--section filtres-->
          <article class="article2">
             <h2 class="Filtres">
                Filtres
@@ -68,10 +69,10 @@
                </li>
             </ul>
          </article></div>
-
+<!--section hébergement-->
          <div class="hebpop">
             <label><i class="fa-solid fa-info"></i></label>
-               Plus de 500 logements sont disponibles dans cette ville</p>
+               <h2> de 500 logements sont disponibles dans cette ville</h2>
 
             <div class="all">
                <section class="section1">
@@ -188,7 +189,7 @@
                         Afficher plus</a>
                   </h2>
                </section>
-
+<!--section les plus populaires-->
                <section class="morefamous">
                   <h3>Les plus populaires
                      <i class="fa-solid fa-chart-line"></i>
@@ -251,6 +252,7 @@
             </div>
 
          </div>
+         <!--section activités-->
          <section class="activity">
             <h3 id="ActivitésàMarseille">Activités à Marseille</h3>
             <div class="blocactiv">
@@ -277,7 +279,7 @@
          </section>
 
       </main>
-
+<!--footer-->
       <footer>
          <div class="footer">
             <h2>
