--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
          </div>
          <nav class="menu">
             <ul>
-               <li ><a href="#HébergementsàMarseille">Hébergements</a></li>
-               <li ><a href="#ActivitésàMarseille">Activités</a></li>
+               <li ><a class="link" href ="#HébergementsàMarseille">Hébergements</a></li>
+               <li ><a class="link" href="#ActivitésàMarseille">Activités</a></li>
             </ul>
          </nav>
 
