--- a/index.html
+++ b/index.html
@@ -17,62 +17,62 @@
          </div>
          <nav class="menu">
             <ul>
-               <li ><a class="link" href ="#HébergementsàMarseille">Hébergements</a></li>
-               <li ><a class="link" href="#ActivitésàMarseille">Activités</a></li>
+               <li><a class="link" href="#HébergementsàMarseille">Hébergements</a></li>
+               <li><a class="link" href="#ActivitésàMarseille">Activités</a></li>
             </ul>
          </nav>
 
       </header>
-<!--main-->
+      <!--main-->
       <main>
          <!--section recherche-->
          <div id="search_filters">
-         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-         <h2>En plein centre-ville ou en pleine nature</h2>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <h2>En plein centre-ville ou en pleine nature</h2>
 
-         <section class="searching">
-           <label><i class="fa-solid fa-location-dot"></i></label>
-            <form>
-               <input type="search" id="search" name="search" placeholder="Marseille, France">
-            </form>
-            <button type="submit" id="busearch">
-               <!--<i class="fas fa-search" id="busearch_loupe"></i>-->
-               <span id="busearchspan">Rechercher</span>
-           </button>
-         </section>
+            <section class="searching">
+               <label><i class="fa-solid fa-location-dot"></i></label>
+               <form>
+                  <input type="search" id="search" name="search" placeholder="Marseille, France">
+               </form>
+               <button type="submit" id="busearch">
+                  <span id="busearchspan">Rechercher</span>
+               </button>
+            </section>
 
-<!--section filtres-->
-         <article class="article2">
-            <h2 class="Filtres">
-               Filtres
-            </h2>
-            <ul class="buttonsfilters">
-               <li>
-                  <button>
-                     <i class="fa-solid fa-money-bill-wave"></i>
-                     Économique
-                  </button>
-               </li>
-               <li>
-                  <button><i class="fa-solid fa-person"></i>
-                     Familial
-                  </button>
-               </li>
-               <li>
-                  <button><i class="fa-solid fa-heart"></i>
-                     Romantique
-                  </button>
-               </li>
-               <li><button><i class="fa-solid fa-dog"></i>
-                     Animaux acceptés
-                  </button>
-               </li>
-            </ul>
-         </article></div>
-<!--section hébergement-->
+            <!--section filtres-->
+            <article class="article2">
+               <h2 class="Filtres">
+                  Filtres
+               </h2>
+               <ul class="buttonsfilters">
+                  <li>
+                     <button>
+                        <i class="fa-solid fa-money-bill-wave"></i>
+                        Économique
+                     </button>
+                  </li>
+                  <li>
+                     <button><i class="fa-solid fa-person"></i>
+                        Familial
+                     </button>
+                  </li>
+                  <li>
+                     <button><i class="fa-solid fa-heart"></i>
+                        Romantique
+                     </button>
+                  </li>
+                  <li><button><i class="fa-solid fa-dog"></i>
+                        Animaux acceptés
+                     </button>
+                  </li>
+               </ul>
+            </article>
+         </div>
+         <!--section hébergement-->
          <div class="hebpop">
             <label><i class="fa-solid fa-info"></i></label>
-               <h2> de 500 logements sont disponibles dans cette ville</h2>
+            <h2> de 500 logements sont disponibles dans cette ville</h2>
 
             <div class="all">
                <section class="section1">
@@ -189,7 +189,7 @@
                         Afficher plus</a>
                   </h2>
                </section>
-<!--section les plus populaires-->
+               <!--section les plus populaires-->
                <section class="morefamous">
                   <h3>Les plus populaires
                      <i class="fa-solid fa-chart-line"></i>
@@ -279,7 +279,7 @@
          </section>
 
       </main>
-<!--footer-->
+      <!--footer-->
       <footer>
          <div class="footer">
             <h2>
