--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
             </article>
          </div>
          <!--section hébergement-->
+         <div id="infos">
+               <label><i class="fa-solid fa-info"></i></label>
+               <h2>Plus de 500 logements sont disponibles dans cette ville</h2>
+            </div>
          <div class="hebpop">
-            <label><i class="fa-solid fa-info"></i></label>
-            <h2> de 500 logements sont disponibles dans cette ville</h2>
-
+            
             <div class="all">
                <section class="section1">
                   <h1 id="HébergementsàMarseille">Hébergements à Marseille</h1>
