--- a/index.html
+++ b/index.html
@@ -193,9 +193,11 @@
                </section>
                <!--section les plus populaires-->
                <section class="morefamous">
-                  <h3>Les plus populaires
+                  <div id="famous-head">
+                     <h3>Les plus populaires</h3>
                      <i class="fa-solid fa-chart-line"></i>
-                  </h3>
+                  </div>
+
 
                   <div class="cards">
 
