--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre-ville ou en pleine nature</h2>
 
-            <section class="searching">
+            <div class="searching">
                <label><i class="fa-solid fa-location-dot"></i></label>
                <form>
                   <input type="search" id="search" name="search" placeholder="Marseille, France">
@@ -38,7 +38,7 @@
                <button type="submit" id="busearch">
                   <span id="busearchspan">Rechercher</span>
                </button>
-            </section>
+            </div>
 
             <!--section filtres-->
             <article class="article2">
@@ -71,14 +71,14 @@
          </div>
          <!--section hébergement-->
          <div id="infos">
-               <label><i class="fa-solid fa-info"></i></label>
-               <h2>Plus de 500 logements sont disponibles dans cette ville</h2>
-            </div>
+            <label><i class="fa-solid fa-info"></i></label>
+            <h2>Plus de 500 logements sont disponibles dans cette ville</h2>
+         </div>
          <div class="hebpop">
-            
+
             <div class="all">
                <section class="section1">
-                  <h1 id="HébergementsàMarseille">Hébergements à Marseille</h1>
+                  <h2 id="HébergementsàMarseille">Hébergements à Marseille</h1>
 
                   <div id="col">
 
@@ -86,6 +86,7 @@
                         <a href="lien">
                            <img class="imgheb" src="Images/ImagesBooki/hebergements/3_medium/aubergecanebière.jpg"
                               alt="Auberge La Canebière">
+
                            <div class="content">
                               <h2 class="titlecard">Auberge La Canebière</h2>
                               <p> Nuit à partir de 25€ </p>
@@ -185,7 +186,8 @@
                               <i class="fa-solid fa-star empty-star"></i>
                            </div>
                      </article>
-                  </div></a>
+                  </div>
+               </a>
 
                   <h2 class="showmore"><a href="show">
                         Afficher plus</a>
